# friendrekt

./: .gitmodules  Cargo.toml  README.md
friendrekt-contracts/src/: IFriendTech.sol  Sniper.sol
friendrekt-py/: main.py  requirements.txt
friendrekt-rs/: build.rs
friendrekt-rs/abi/: sniper.json
friendrekt-rs/src/: bset.rs  fasthttp.rs  main.rs  math.rs  prod_kosetto.rs
src/: main.rs
