[package]
name = "poolwatch"
version = "0.1.0"
edition = "2021"

[build-dependencies]
ethers-contract-abigen = "2.0.4"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"